--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "solidity-coverage": "^0.8.2"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.1",
     "dotenv": "^16.0.3"
   }
 }
